# yahtzee-simulator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_scoreboard.py
yahtzee/: decision_type.py  game.py  score_category.py  scorecard.py  simulator.py  strategy.py  strategy_helpers.py
yahtzee/strategies/: test_strategy.py
yahtzee_simulator/: __init__.py  decision_type.py  game.py  scorecard.py  simulator.py  strategy.py  strategy_helpers.py
yahtzee_simulator/strategies/: example_strategy.py
