[project]
name = "yahtzee-simulator"
version = "0.1.0"
description = "A configurable Yahtzee simulator that generates result statistics for a given strategy."
authors = [
    { name = "Elliot Söderström" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.10.7"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
